# mucodi-radiology

./: .gitignore  LICENSE  NOTICE  README.md  main.py  pyproject.toml
dataprep/: build_npy_resampled_cache.py  config.py  datasets.yaml  loader.py
dataprep/datasets/: __init__.py  __main__.py  cli.py  coca.py  coca_gated.py  ctrate.py  dlcs24.py  engine.py  lidc.py  lndb.py  midrc_ricord.py  mosmed.py  osic.py  radchestct.py  registry.py  rspect.py  spec.py  stoic2021.py
dataprep/tests/: test_engine.py  test_radchestct_regeneration.py  test_registry.py
experiments/: __init__.py  cluster.py  config.py  launch.py  phase_detector.py  pipeline.py
experiments/studies/: _layout.py  _roster.py  macro_aggregate.py
experiments/tests/: test_jobspec_render.py  test_launcher_dry_run.py  test_phase_detector.py  test_radchestct_merge.py  test_studies_import.py
jobs/: env.sh  secrets.env.example
moco/: feature_bank.py  loss.py
moco/tests/: test_loss.py
models/: efficientnet3d.py  student.py
models/tests/: test_efficientnet3d.py
rate-evals/: CONTRACT.md  LICENSE  README.md  pyproject.toml
rate-evals/configs/: config.yaml
rate-evals/configs/dataset/: coca.yaml  coca_gated.yaml  dlcs24.yaml  lidc_chest_ct.yaml  lndb.yaml  midrc_ricord.yaml  mosmed.yaml  osic.yaml  radchestct.yaml  rspect.yaml
rate-evals/configs/dataset/coca/: ctclip_zero_shot.yaml  curia1.yaml  pillar0_chest_ct.yaml  tangerine_vit.yaml
rate-evals/configs/dataset/coca_gated/: ctclip_vocabfine_zero_shot.yaml  curia1.yaml  pillar0_chest_ct.yaml  tangerine_vit.yaml
rate-evals/configs/dataset/ctrate/: ctclip_zero_shot.yaml  curia2.yaml  pillar0_chest_ct.yaml  random_features.yaml  tangerine_vit.yaml
rate-evals/configs/dataset/dlcs24/: ctclip_vocabfine_zero_shot.yaml  pillar0_chest_ct.yaml  tangerine_vit.yaml
rate-evals/configs/dataset/lidc_chest_ct/: ctclip_zero_shot.yaml  curia1.yaml  pillar0_chest_ct.yaml  tangerine_vit.yaml
rate-evals/configs/dataset/lndb/: ctclip_vocabfine_zero_shot.yaml  pillar0_chest_ct.yaml  tangerine_vit.yaml
rate-evals/configs/dataset/midrc_ricord/: ctclip_vocabfine_zero_shot.yaml  pillar0_chest_ct.yaml  tangerine_vit.yaml
rate-evals/configs/dataset/mosmed/: ctclip_vocabfine_zero_shot.yaml  pillar0_chest_ct.yaml  tangerine_vit.yaml
rate-evals/configs/dataset/osic/: ctclip_vocabfine_zero_shot.yaml  pillar0_chest_ct.yaml  tangerine_vit.yaml
rate-evals/configs/dataset/radchestct/: ctclip_vocabfine_zero_shot.yaml  pillar0_chest_ct.yaml  tangerine_vit.yaml
rate-evals/configs/dataset/radchestct_aniso/: mucodi_student.yaml
rate-evals/configs/dataset/rspect/: ctclip_vocabfine_zero_shot.yaml  pillar0_chest_ct.yaml  tangerine_vit.yaml
rate-evals/configs/dataset/stoic2021/: ctclip_zero_shot.yaml  curia1.yaml  mucodi_student.yaml  pillar0_chest_ct.yaml  random_features_s1.yaml  tangerine_vit.yaml
rate-evals/configs/model/: ctclip_vocabfine_zero_shot.yaml  ctclip_zero_shot.yaml  curia1.yaml  curia2.yaml  mucodi_student.yaml  pillar0_chest_ct.yaml  random_features.yaml  random_features_s1.yaml  tangerine_vit.yaml
rate-evals/rate_eval/: __init__.py  components.py
rate-evals/rate_eval/cli/: __init__.py  aggregate.py  deploy.py  evaluate.py  extract.py
rate-evals/rate_eval/config/: __init__.py  dataset_schema.py  hydra.py  loader.py  overrides.py
rate-evals/rate_eval/core/: __init__.py  crossval.py  device.py  errors.py  logging.py  seed.py
rate-evals/rate_eval/datasets/: __init__.py  affine_repair.py  ctclip_orient.py  ctrate_metadata.py  nifti.py  nifti_recipes.py  preprocess.py  readers.py
rate-evals/rate_eval/datasets/_core/: lidc_base.py  pillar0_chest_resample.py
rate-evals/rate_eval/datasets/ctrate/: _base.py  for_ctclip.py  for_curia.py  for_pillar0.py  for_tangerine.py
rate-evals/rate_eval/datasets/radchestct/: for_ctclip.py  for_pillar0.py  for_tangerine.py
rate-evals/rate_eval/datasets/stoic2021/: _mha_read.py  for_ctclip.py  for_curia.py  for_mucodi_student.py  for_pillar0.py
rate-evals/rate_eval/evaluation/: __init__.py  data.py  deploy.py  heads.py  stats.py  train.py
rate-evals/rate_eval/io/: __init__.py  cache.py  cache_meta.py  download_lock.py  feature_loaders.py  result_schema.py
rate-evals/rate_eval/models/: __init__.py  base.py  common.py  ctclip_zero_shot.py  curia1.py  curia2.py  pillar0.py  preprocess_adapter.py  random_features.py  student.py  tangerine_vit.py  upstream_paths.py
rate-evals/rate_eval/pipelines/: __init__.py  extract.py  extract_loop.py  gpu_fanout.py
rate-evals/tests/contract/: test_no_torch_at_top_level.py  test_teacher_protocol.py
rate-evals/tests/integration/: test_aggregate_cli.py  test_cohort_cluster_ci.py  test_compare_aligner.py  test_dataset_factory.py  test_deploy.py  test_nifti_ct_dataset.py
rate-evals/tests/unit/: _golden_stats.json  _stats_fixtures.py  test_affine_repair.py  test_cache_meta.py  test_crossval.py  test_dataset_schema.py  test_heads.py  test_metric_cis.py  test_preprocess_config.py  test_result_schema.py  test_stats_benchmark.py  test_stats_cluster.py  test_stats_multiclass.py
scripts/: patch_pillar0_post_init.py  setup_external_teachers.sh
utils/: engine.py  options.py  utils.py
utils/tests/: test_engine.py
(+7 files in other folders)
