# Install with `uv sync --frozen` (this project + the pinned lockfile). rave is not on PyPI;
# add it separately (--no-deps protects the torch/transformers pins):
#   uv pip install --no-deps "git+https://github.com/YalaLab/rave"

[project]
name = "mucodi-radiology"
version = "0.1.0"
description = "MuCoDi: multi-teacher contrastive knowledge distillation for 3D radiology foundation models"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # Runtime dep of the CT-CLIP teacher wrapper; transformers treats it as an
    # optional extra, so pin it explicitly to keep the extraction path resolvable.
    "accelerate>=1.0",
    "dicom2nifti>=2.6",
    "einops>=0.8",
    # transformers 5.12 needs huggingface-hub>=1.5; the resolver otherwise selects
    # a 1.3.x transitive and import breaks. Pin explicitly.
    "huggingface-hub>=1.5.0,<2.0",
    "kaggle>=2.1",
    "nibabel>=5.2",
    "numpy>=1.24,<2.0",
    # Pin to match rate-evals: the student arch is built via MONAI EfficientNet,
    # whose block layout changed across minors, and a drift would break the eval load.
    "monai>=1.4,<1.5",
    "pandas>=2.3.3",
    "pydicom>=3.0",
    "pylidc>=0.2",
    "pyyaml>=6.0.3",
    "scikit-image>=0.26",
    "SimpleITK>=2.5",
    "torch>=2.11.0",
    "torchvision>=0.26.0",
    "tqdm>=4.67.1",
    "wandb>=0.24.0",
]

# Pin torch + torchvision to the CUDA (cu128) wheel index so `uv sync` from a fresh
# clone produces a GPU-capable venv; `explicit = true` confines the override to
# the packages listed in [tool.uv.sources].
[tool.uv.sources]
torch       = { index = "pytorch-cu128" }
torchvision = { index = "pytorch-cu128" }

[[tool.uv.index]]
name     = "pytorch-cu128"
url      = "https://download.pytorch.org/whl/cu128"
explicit = true
