[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rate-eval"
version = "2.1.0"
authors = [
    {name = "Yala Lab @ UC Berkeley and UCSF", email = "yala@berkeley.edu"},
    {name = "Maurice Heide", email = "maurice@marioheide.de"},
]
description = "Radiology foundation-model evaluation harness (a refactored derivative of YalaLab's RATE-Evals)"
readme = "README.md"
requires-python = ">=3.12"
license = {file = "LICENSE"}
keywords = ["medical-imaging", "vision-language-models", "evaluation", "deep-learning", "radiology"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]
dependencies = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "numpy",
    "pandas>=1.3.0",
    "opencv-python>=4.5.0",
    "Pillow>=8.3.0",
    "transformers",
    "tokenizers>=0.13.0",
    "huggingface_hub>=0.21.0",
    "accelerate",
    "einops>=0.6.0",
    "scikit-learn>=1.0.0",
    "joblib>=1.1.0",
    "scipy>=1.7.0",
    "tqdm>=4.62.0",
    "PyYAML>=6.0",
    "jinja2>=3.1.0",
    "protobuf>=3.20.0",
    "colorlog>=6.6.0",
    "timm>=1.0.17",
    "wandb>=0.19.11",
    "nvitop>=1.5.1",
    "hf-transfer>=0.1.9",
    "nibabel>=5.2.1",
    "pip>=25.0.1",
    "ipdb>=0.13.13",
    "jupyterlab>=4.3.8",
    "nltk==3.9.1",
    # monai 1.3.0 uses importlib's removed find_module API and breaks under Python 3.12.
    "monai>=1.4,<1.5",
    "vector-quantize-pytorch==1.1.2",
    "hydra-core>=1.3.2",
    "rad-vision-engine @ git+https://github.com/YalaLab/rave",
]

[project.urls]
Homepage = "https://github.com/mooofna/mucodi-radiology"
Repository = "https://github.com/mooofna/mucodi-radiology"
"Bug Tracker" = "https://github.com/mooofna/mucodi-radiology/issues"
"Upstream (RATE-Evals)" = "https://github.com/YalaLab/rate-evals"
"RAVE (rad-vision-engine)" = "https://github.com/YalaLab/rave"

[project.scripts]
rate-extract = "rate_eval.cli.extract:extract_embeddings_cli"
rate-evaluate = "rate_eval.cli.evaluate:evaluate_embeddings_cli"
rate-aggregate = "rate_eval.cli.aggregate:main"
rate-deploy = "rate_eval.cli.deploy:deploy_embeddings_cli"

[project.optional-dependencies]
dev = [
    "pytest>=6.2.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
    "mypy>=0.910",
    "ruff>=0.4.9",
]
medical = [
    "SimpleITK>=2.2.0",
    "nibabel>=3.2.0",
]
[tool.setuptools.packages.find]
where = ["."]
include = ["rate_eval*"]

[tool.setuptools.package-data]
rate_eval = ["configs/*.yaml", "configs/**/*.yaml"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.isort]
profile = "black"
line_length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["rate_eval", "scripts"]
extend-exclude = [
    "cache",
    "rate_eval.egg-info",
]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "W",
    "B",
    "I",
    "UP",
]
ignore = [
    "E501",
]

[tool.ruff.lint.isort]
known-first-party = ["rate_eval"]
